fixed filters, now they don't overlap

--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -95,22 +95,22 @@
 
 /* ???????????????????? DropDown Part ?????????? */
 
-#myDropdown {
+.myDropdown {
   max-height: 300px;
   overflow-y: scroll;
   width: 100%;
 }
 
 /* * Scroll bar styling */
-#myDropdown::-webkit-scrollbar {
+.myDropdown::-webkit-scrollbar {
   width: 5px;
   /* TODO: Leaving out the scrollbar for now */
   display: none;
 }
-#myDropdown::-webkit-scrollbar-track {
+.myDropdown::-webkit-scrollbar-track {
   background: rgb(239, 239, 239);
 }
-#myDropdown::-webkit-scrollbar-thumb {
+.myDropdown::-webkit-scrollbar-thumb {
   background-color: #D5D1FF;
   /* color of the scroll thumb */
   border-radius: 40px;
@@ -134,6 +134,11 @@
 /* The search field when it gets focus/clicked on */
 .myInput:focus {
   outline: 2px solid #D5D1FF;
+}
+
+/* Display the dropdown when the input is focused on */
+.myInput:focus + .myDropdown {
+  display: block;
 }
 
 /* The container <div> - needed to position the dropdown content */
